detecting box hrefs and fix scrollbar

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,26 +7,25 @@
 .fslightbox-container {
   position: absolute;
   top:0;
-  left:0;
-  width:100vw;
-  height: 100vh;
+  bottom: 0;
+  right: 0;
+  width:100%;
+  height: 100%;
   background: #1e1e1e;
   background: linear-gradient(rgba(30,30,30,0.9),rgba(0,0,0,1) 1810%);
   font-family: "Montserrat", sans-serif;
   z-index: 9999999;
-  //display: flex;
-  //justify-content: center;
-  //align-items: center;
 }
 
 
 .fslightbox-open {
-  position:absolute;
-  width:100%;
-  overflow-y:hidden;
-  overflow-x: hidden;
-  top:0;
-  bottom:0;
+  overflow: hidden;
+  position: absolute;
+  height: 100%;
+}
+
+.fslightbox-scrollbarfix {
+  padding-right: 17px;
 }
 
 .fslightbox-nav {
