--- a/src/scss/useless.scss
+++ b/src/scss/useless.scss
@@ -13,13 +13,13 @@ html, body {
 }
 
 .images {
-  width: 100%;
+  width: 50%;
   margin: auto;
 
   .image {
+    margin-top: 50px;
     max-width: 100%;
     max-height:100%;
-    margin-bottom: 50px;
   }
 }
 
